--- a/h/ho/hom/homesite.com.html
+++ b/h/ho/hom/homesite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the homesite.com privacy policy that was archived on 2013-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130623122319id_/http%3A//homesite.com/privacy-policy/index.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homesite.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222144133id_/http%3A//www.homesite.com/privacy-policy/index.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Homesite's Privacy Policies</title>
@@ -130,16 +130,16 @@ GSearch.setOnLoadCallback(OnLoad);
         <div id="toolbarLcap"></div>
         <div id="toolbarRcap"></div>
         <ul>
-          <li><a href="../homeowners-insurance/index.htm" class="first">Homeowners Insurance</a>
-          <ul>
+          <li><a href="../homeowners-insurance/index.htm" class="first" style="padding-right: 16px;">Homeowners Insurance<img src="../images/homesite/nav/trans.gif" class="downarrowclass" style="border:0;"></a>
+          <ul style="top: 27px; display: none; visibility: visible;">
   			<li class="firstCol"><a href="../homeowners-insurance/about-homeowners-insurance.htm" class="noBackground">About Homeowners Insurance</a></li>
   			<li class="firstCol"><a href="../homeowners-insurance/homeowners-insurance-coverage.htm" class="noBackground">Homeowner Coverage</a></li>
   			<li class="firstCol"><a href="../homeowners-insurance/homeowners-insurance-quote.htm" class="noBackground">Get a Quote</a></li>
   			<li class="firstCol"><a href="https://www.homesite.com/OnlineServicing/Login.aspx" class="noBackground">Manage My Policy</a></li>
   		  </ul>
           </li>
-          <li><a href="../renters-insurance/index.htm">Renters Insurance</a>
-          <ul>
+          <li><a href="../renters-insurance/index.htm" style="padding-right: 16px;">Renters Insurance<img src="../images/homesite/nav/trans.gif" class="downarrowclass" style="border:0;"></a>
+          <ul style="top: 27px; display: none; visibility: visible;">
   			<li class="secondCol"><a href="../renters-insurance/about-renters-insurance.htm" class="noBackground">About Renters Insurance</a></li>
   			<li class="secondCol"><a href="../renters-insurance/renters-insurance-coverage.htm" class="noBackground">Renters Coverage</a></li>
   			<li class="secondCol"><a href="../renters-insurance/real-renters-experiences.htm" class="noBackground">Real Renters' Experiences</a></li>
@@ -147,31 +147,31 @@ GSearch.setOnLoadCallback(OnLoad);
   			<li class="secondCol"><a href="https://www.homesite.com/OnlineServicing/Login.aspx" class="noBackground">Manage My Policy</a></li>
   		  </ul>
           </li>
-          <li><a href="../condo-insurance/index.htm">Condo Insurance</a>
-           <ul>
+          <li><a href="../condo-insurance/index.htm" style="padding-right: 16px;">Condo Insurance<img src="../images/homesite/nav/trans.gif" class="downarrowclass" style="border:0;"></a>
+           <ul style="top: 27px; display: none; visibility: visible;">
   			<li class="thirdCol"><a href="../condo-insurance/about-condo-insurance.htm" class="noBackground">About Condo Insurance</a></li>
   			<li class="thirdCol"><a href="../condo-insurance/condo-insurance-coverage.htm" class="noBackground">Condo Coverage</a></li>
   			<li class="thirdCol"><a href="../condo-insurance/condo-insurance-quote.htm" class="noBackground">Get a Quote</a></li>
   			<li class="thirdCol"><a href="https://www.homesite.com/OnlineServicing/Login.aspx" class="noBackground">Manage My Policy</a></li>
   		  </ul>
           </li>
-          <li><a href="../flood-insurance/index.htm">Flood Insurance</a>
-           <ul>
+          <li><a href="../flood-insurance/index.htm" style="padding-right: 16px;">Flood Insurance<img src="../images/homesite/nav/trans.gif" class="downarrowclass" style="border:0;"></a>
+           <ul style="top: 27px; display: none; visibility: visible;">
   			<li class="thirdCol"><a href="../flood-insurance/about-flood-insurance.htm" class="noBackground">About Flood Insurance</a></li>
   			<li class="thirdCol"><a href="../flood-insurance/flood-insurance-coverage.htm" class="noBackground">Flood Coverage</a></li>
   			<li class="thirdCol"><a href="../flood-insurance/flood-insurance-quote.htm" class="noBackground">Get a Quote</a></li>
   		  </ul>
           </li>
-          <li><a href="../claims/index.htm">Claims</a>
-          <ul>
+          <li><a href="../claims/index.htm" style="padding-right: 16px;">Claims<img src="../images/homesite/nav/trans.gif" class="downarrowclass" style="border:0;"></a>
+          <ul style="top: 27px; display: none; visibility: visible;">
   			<li class="fourthCol"><a href="../claims/home-insurance-claims.htm" class="noBackground">About the Claims Process</a></li>
   			<li class="fourthCol"><a href="https://www.homesite.com/fnol" class="noBackground">Submit a Claim</a></li>
   			<li class="fourthCol"><a href="../claims/loss-prevention-facts.htm" class="noBackground">Loss Prevention Facts</a></li>
 <li class="fourthCol"><a href="../claims/catastrophe.htm" class="noBackground">Catastrophe</a></li>
   		  </ul>
           </li>
-          <li><a href="../insurance-resources/index.htm">Resources</a>
-           <ul>
+          <li><a href="../insurance-resources/index.htm" style="padding-right: 16px;">Resources<img src="../images/homesite/nav/trans.gif" class="downarrowclass" style="border:0;"></a>
+           <ul style="top: 27px; display: none; visibility: visible;">
   			<li class="fifthCol"><a href="../insurance-resources/home-insurance-articles.htm" class="noBackground">Articles</a></li>
   			<li class="fifthCol"><a href="../insurance-resources/home-insurance-basics.htm" class="noBackground">Home Insurance Basics</a></li>
   			<li class="fifthCol"><a href="../insurance-resources/risk-management.htm" class="noBackground">Risk Management</a></li>
@@ -180,8 +180,8 @@ GSearch.setOnLoadCallback(OnLoad);
             		<li class="fifthCol"><a href="../insurance-resources/renters-insurance-coverage-calculator.htm" class="noBackground">Renters Coverage Calculator</a></li>
   		  </ul>
           </li>
-          <li><a href="../about-homesite/index.htm">About Us</a>
-           <ul>
+          <li><a href="../about-homesite/index.htm" style="padding-right: 16px;">About Us<img src="../images/homesite/nav/trans.gif" class="downarrowclass" style="border:0;"></a>
+           <ul style="top: 27px; display: none; visibility: visible;">
   			<li class="sixthCol"><a href="../about-homesite/insurance-careers.htm" class="noBackground">Careers</a></li>
   			
   			<li class="sixthCol"><a href="../about-homesite/our-commitment-to-customers.htm" class="noBackground">Our Commitment to Customers</a></li>
@@ -245,8 +245,8 @@ We use third-party advertising companies to serve ads on sites on which we adver
             </p><p align="left"><strong>Contacting Homesite</strong><br>
               If you have any questions   about this privacy statement, the practices of this site, or your dealings with   this web site, you can contact us online at <a href="mailto:info@homesite.com" target="_blank">info@homesite.com</a>. You can also reach us by mail   at:<br>
               <strong>Homesite Group Inc.<br>
-                99 Bedford Street<br>
-                Boston, MA 02111</strong></p>
+                One Federal Street<br>
+                Boston, MA 02110</strong></p>
             <p align="left"><strong>Acceptance of These Terms<br>
             </strong>By using this site,   you signify your consent to Homesite's Privacy Policies. If you do not agree to   these policies, please do not use this site. We reserve the right, at our   discretion, to update, change, modify, add, or remove portions of this policy   from time to time. Your continued use of this site and others that may be owned   by Homesite following the posting of changes to these terms will mean you accept   those changes. Any changes to this privacy policy will be promptly disclosed in   this area.</p>
 <p>Take a few minutes to get a free, no obligation <a href="../homeowners-insurance/homeowners-insurance-quote.htm">homeowners insurance quote</a>, and see just how affordable our rates can be.</p>
@@ -291,7 +291,8 @@ We use third-party advertising companies to serve ads on sites on which we adver
       <div id="footer">
         <div id="footerNav">
           <div id="footerNavLtCap"></div>
-          <div id="footerNavRtCap"></div> <div class="footer_link"><a href="../about-homesite/compliance.htm" class="bottom_help" id="UnderwritingCompanies">Compliance</a></div>
+          <div id="footerNavRtCap"></div> <div class="footer_link"><a href="../legal/new-york-residents.htm" class="bottom_help" id="NewYorkRegulation">New York Residents</a></div>
+<div class="footer_link"><a href="../about-homesite/compliance.htm" class="bottom_help" id="UnderwritingCompanies">Compliance</a></div>
           <div class="footer_link"><a href="../underwriting-companies/index.htm" class="bottom_help" id="ImportantNoticeLink">Underwriting Companies</a></div>
           <div class="footer_link"><a href="../privacy-policy/index.htm" class="bottom_help" id="InternetPrivacyPolicy">Privacy Policy</a></div>
           <div class="footer_link"><a href="../terms-conditions/index.htm" class="bottom_help" id="InternetPrivacyPolicy">Terms &amp; Conditions</a></div>
@@ -300,8 +301,8 @@ We use third-party advertising companies to serve ads on sites on which we adver
         </div>
         <div id="footerSecure">
           <div class="mcafeeBox"><a href="https://www.scanalert.com/RatingVerify?ref=www.homesite.com" target="_blank" class="footer_pad"><img height="32" width="115" border="0" oncontextmenu="alert('Copying Prohibited by Law - HACKER SAFE is a Trademark of McAfee, Inc.'); return false;" alt="HACKER SAFE certified sites prevent over 99.9% of hacker crime." src="http://images.scanalert.com/meter/www.homesite.com/12.gif"></a></div>
-          <div class="verisignBox"><a href="javascript:verisignWin=window.open('https://seal.verisign.com/splash?form_file=fdf/splash.fdf&amp;dn=www.homesite.com&amp;lang=en','verisignWin','width=550,height=455,toolbar=yes,scrollbars=yes,location=1');verisignWin.focus();"><script type="text/javascript" src="https://seal.verisign.com/getseal?host_name=WWW.Homesite.Com&amp;size=S&amp;use_flash=NO&amp;use_transparent=NO&amp;lang=en"></script></a></div>
-          <div class="secureLock"><p>This website is protected by 1024 bit-encryption.</p></div><a href="http://www.twitter.com/Homesite" target="_blank" title="Follow us on Twitter!"><div class="twitterButton"></div></a><a href="http://www.facebook.com/pages/Homesite-Insurance/157270344300333" target="_blank" title="Friend us on Facebook!"><div class="facebookButton"></div></a>
+          <div class="trustWaveBox"><script type="text/javascript" src="https://sealserver.trustwave.com/seal.js?&#10;&#10;style=invert"></script></div>
+          <div class="secureLock"><p>This website is protected by 2048 bit-encryption.</p></div><a href="http://www.twitter.com/Homesite" target="_blank" title="Follow us on Twitter!"><div class="twitterButton"></div></a><a href="http://www.facebook.com/pages/Homesite-Insurance/157270344300333" target="_blank" title="Friend us on Facebook!"><div class="facebookButton"></div></a>
         </div>
       </div>
       <!-- end footer -->
