--- a/c/cl/cli/clipjunkie.com.html
+++ b/c/cl/cli/clipjunkie.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the clipjunkie.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622213617id_/http%3A//www.clipjunkie.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clipjunkie.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222151347id_/http%3A//www.clipjunkie.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Contact Us at ClipJunkie.com</title>
@@ -196,16 +196,16 @@ width=160 height=600 border=1></a></noscript>
 </tr>
 <tr>
 	<td id="sidebar" align="center" valign="top">
-	<p align="left" class="nav"><a href="/A-Fly-Invades-The-Graham-Norton-Show-vid15137.html" class="nav" title="A Fly Invades The Graham Norton Show">100's of Classified Ad...</a></p>
-<p align="left" class="nav"><a href="/Crossbow-vs-Dr-Pepper-Ten-at-2500fps-vid15121.html" class="nav" title="Crossbow vs Dr Pepper Ten at 2500fps">100's of Article &amp;...</a></p>
-<p align="left" class="nav"><a href="/Gaming-With-My-Mom-vid15132.html" class="nav" title="Gaming With My Mom ">buy site traffic</a></p>
-<p align="left" class="nav"><a href="/Trampoline-Cliff-Jumping-vid15134.html" class="nav" title="Trampoline Cliff Jumping">FREE Web Traffic Gener...</a></p>
-<p align="left" class="nav"><a href="/What-if-Superman-Punched-You-vid15115.html" class="nav" title="What if Superman Punched You?">Your video was great %...</a></p>
-<p align="left" class="nav"><a href="/Death-41-Historic-Demises-vid15125.html" class="nav" title="Death! 41 Historic Demises">traffic exchange sites</a></p>
-<p align="left" class="nav"><a href="/Top-10---Premature-Celebrations-vid15110.html" class="nav" title="Top 10 - Premature Celebrations">I WILL SHOW YOU HOW TO...</a></p>
-<p align="left" class="nav"><a href="/Hilarious-News-Videobombs-vid15122.html" class="nav" title="Hilarious News Videobombs">increase traffic website</a></p>
-<p align="left" class="nav"><a href="/Crossbow-vs-Dr-Pepper-Ten-at-2500fps-vid15121.html" class="nav" title="Crossbow vs Dr Pepper Ten at 2500fps">how the fuck do they p...</a></p>
-<p align="left" class="nav"><a href="/Nice-apartments-for-cheapwhats-the-catch-vid15108.html" class="nav" title="Nice apartments for cheap...what's the catch?">Make Money Online NOW!</a></p>
+	<p align="left" class="nav"><a href="/The-Crucible-vid15963.html" class="nav" title="The Crucible">gespraglichar</a></p>
+<p align="left" class="nav"><a href="/Key--Peele-Proud-Thug-vid15964.html" class="nav" title="Key &amp; Peele: Proud Thug">gespraglichar</a></p>
+<p align="left" class="nav"><a href="/Addicted-vid2206.html" class="nav" title="Addicted?">gespraglichar</a></p>
+<p align="left" class="nav"><a href="/Cute-Seal-Jumps-In-for-a-Hug-vid16134.html" class="nav" title="Cute Seal Jumps In for a Hug">hantanglove</a></p>
+<p align="left" class="nav"><a href="/If-the-Roles-were-Reversed-at-Christmas-vid16127.html" class="nav" title="If the Roles were Reversed at Christmas">hantanglove</a></p>
+<p align="left" class="nav"><a href="/-vid.html" class="nav" title="">&amp;#1057;&amp;#1082;...</a></p>
+<p align="left" class="nav"><a href="/Turning-Left-in-Snowy-Michigan-vid16093.html" class="nav" title="Turning Left in Snowy Michigan">englandoflove</a></p>
+<p align="left" class="nav"><a href="/Cat-Fails-Jump-From-Snow-Covered-Car-vid16114.html" class="nav" title="Cat Fails Jump From Snow-Covered Car">hantanglove</a></p>
+<p align="left" class="nav"><a href="/News-Anchor-Cant-Wait-to-Leave-vid16110.html" class="nav" title="News Anchor Can't Wait to Leave">hantanglove</a></p>
+<p align="left" class="nav"><a href="/News-Anchor-Cant-Wait-to-Leave-vid16110.html" class="nav" title="News Anchor Can't Wait to Leave">englandoflove</a></p>
 	</td>
 </tr>
 <tr>
@@ -223,16 +223,16 @@ width=160 height=600 border=1></a></noscript>
 </tr>
 <tr>
 	<td id="sidebar" align="center" valign="top">
-	<p align="left" class="nav"><a href="/The-Best-VINES-of-2013-Compilation-vid15104.html" class="nav" title="The Best VINES of 2013 Compilation">The Best VINES of 2013...</a></p>
-<p align="left" class="nav"><a href="/The-Man-Who-Cant-Stop-Smiling-vid15114.html" class="nav" title="The Man Who Can't Stop Smiling">The Man Who Can't Stop...</a></p>
-<p align="left" class="nav"><a href="/Fox-Cub-Comes-to-People-for-Help-vid15099.html" class="nav" title="Fox Cub Comes to People for Help">Fox Cub Comes to Peopl...</a></p>
-<p align="left" class="nav"><a href="/Top-10---Premature-Celebrations-vid15110.html" class="nav" title="Top 10 - Premature Celebrations">Top 10 - Premature Cel...</a></p>
-<p align="left" class="nav"><a href="/Melbourne-F1-2013-Speed-Comparison-vid15109.html" class="nav" title="Melbourne F1 2013 Speed Comparison">Melbourne F1 2013 Spee...</a></p>
-<p align="left" class="nav"><a href="/Hilarious-News-Videobombs-vid15122.html" class="nav" title="Hilarious News Videobombs">Hilarious News Videobombs</a></p>
-<p align="left" class="nav"><a href="/When-Animals-Attack-vid15128.html" class="nav" title="When Animals Attack ">When Animals Attack </a></p>
-<p align="left" class="nav"><a href="/Black-Squirrel-Assault-Course-vid15100.html" class="nav" title="Black Squirrel Assault Course">Black Squirrel Assault...</a></p>
-<p align="left" class="nav"><a href="/10-Most-Dangerous-Roads-vid15130.html" class="nav" title="10 Most Dangerous Roads">10 Most Dangerous Roads</a></p>
-<p align="left" class="nav"><a href="/Sheep-Chase-Off-Wolf-vid15103.html" class="nav" title="Sheep Chase Off Wolf">Sheep Chase Off Wolf</a></p>
+	<p align="left" class="nav"><a href="/Buffalo-Launches-Predator-Into-The-Air-vid16103.html" class="nav" title="Buffalo Launches Predator Into The Air">Buffalo Launches Preda...</a></p>
+<p align="left" class="nav"><a href="/Best-Goal-Cam-Shot-EVER-vid16122.html" class="nav" title="Best Goal Cam Shot EVER!">Best Goal Cam Shot EVER!</a></p>
+<p align="left" class="nav"><a href="/10-Sexy-Facts-About-Playboy-vid16129.html" class="nav" title="10 Sexy Facts About Playboy">10 Sexy Facts About Pl...</a></p>
+<p align="left" class="nav"><a href="/If-the-Roles-were-Reversed-at-Christmas-vid16127.html" class="nav" title="If the Roles were Reversed at Christmas">If the Roles were Reve...</a></p>
+<p align="left" class="nav"><a href="/Walking-Against-Strong-Wind-in-Norway-vid16104.html" class="nav" title="Walking Against Strong Wind in Norway">Walking Against Strong...</a></p>
+<p align="left" class="nav"><a href="/News-Anchor-Cant-Wait-to-Leave-vid16110.html" class="nav" title="News Anchor Can't Wait to Leave">News Anchor Can't Wait...</a></p>
+<p align="left" class="nav"><a href="/Cat-Fails-Jump-From-Snow-Covered-Car-vid16114.html" class="nav" title="Cat Fails Jump From Snow-Covered Car">Cat Fails Jump From Sn...</a></p>
+<p align="left" class="nav"><a href="/Golf-Shot-of-the-Year-vid16128.html" class="nav" title="Golf Shot of the Year">Golf Shot of the Year</a></p>
+<p align="left" class="nav"><a href="/Jaguar-vs-Chicken-vid16118.html" class="nav" title="Jaguar vs. Chicken">Jaguar vs. Chicken</a></p>
+<p align="left" class="nav"><a href="/The-Butcher-vid16113.html" class="nav" title="The Butcher">The Butcher</a></p>
 	</td>
 </tr>
 <tr>
@@ -388,16 +388,16 @@ $resultsUsers = getset("SELECT *, ROUND(votesTotal + (favTotal*2) + (viewsTotal/
 <tr>
 	<td id="sidebar" align="center" valign="top">
 
-	<p align="left" class="nav"><a href="/linkout.php?id=28225" class="nav" target="_blank">Crazy Funny</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=194" class="nav" target="_blank">Hot Vids &amp; Pics</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=9704" class="nav" target="_blank">Gorilla Fights</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=11421" class="nav" target="_blank">Friday Funnies</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=12077" class="nav" target="_blank">Hot clips</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=28609" class="nav" target="_blank">Shocking Videos!</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=267" class="nav" target="_blank">Sexy vs Stupid</a></p>
+	<p align="left" class="nav"><a href="/linkout.php?id=194" class="nav" target="_blank">Hot Vids &amp; Pics</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=569" class="nav" target="_blank">Superfunblog</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=9180" class="nav" target="_blank">Girl Fight</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=28917" class="nav" target="_blank">Funnysite</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=38155" class="nav" target="_blank">Very Funny Videos</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=26392" class="nav" target="_blank">HumorFeeds</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=28609" class="nav" target="_blank">Shocking Videos!</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=83" class="nav" target="_blank">Funny Movies Downloads</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=28225" class="nav" target="_blank">Crazy Funny</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=18" class="nav" target="_blank">Gorilla Mask</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=1462" class="nav" target="_blank">Crazy Frankenstein</a></p>
 	</td>
 </tr>
 
@@ -443,31 +443,31 @@ $resultsUsers = getset("SELECT *, ROUND(votesTotal + (favTotal*2) + (viewsTotal/
 	<td id="sidebar" align="center" valign="top">
 	<p align="left" class="nav"><a href="http://www.sexyandfunny.com" class="nav" target="_blank">Funny and Sexy Videos</a></p>
 
-	<p align="left" class="nav"><a href="/linkout.php?id=4" class="nav" target="_blank">Extreme Videos</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=25471" class="nav" target="_blank">Funny Videos</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=28917" class="nav" target="_blank">Funnysite</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=66" class="nav" target="_blank">Googly Foogly</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=2916" class="nav" target="_blank">Most Funny Pictures</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=72" class="nav" target="_blank">G4N  Babes and Celebs</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=26392" class="nav" target="_blank">HumorFeeds</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=1462" class="nav" target="_blank">Crazy Frankenstein</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=11" class="nav" target="_blank">Lemonzoo Videos</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=15" class="nav" target="_blank">Bizarre Video Clips</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=547" class="nav" target="_blank">the BIG BAD BLOB</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=5" class="nav" target="_blank">Zipped videos</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=312" class="nav" target="_blank">collegehumor.com</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=994" class="nav" target="_blank">goodsearch.com</a></p>
+	<p align="left" class="nav"><a href="/linkout.php?id=11421" class="nav" target="_blank">Friday Funnies</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=31826" class="nav" target="_blank">AntiMotivational</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=4" class="nav" target="_blank">Extreme Videos</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=13" class="nav" target="_blank">Funny Video Hub</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=577" class="nav" target="_blank">StupidExe</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=25403" class="nav" target="_blank">eBaum Nation</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=26027" class="nav" target="_blank">Too Damn Funny</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=38155" class="nav" target="_blank">Very Funny Videos</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=1" class="nav" target="_blank">Dumpzilla</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=6" class="nav" target="_blank">Funny Videos</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=27546" class="nav" target="_blank">Hidden Youtube Videos</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=72" class="nav" target="_blank">G4N  Babes and Celebs</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=7" class="nav" target="_blank">Funny Stuff</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=66" class="nav" target="_blank">Googly Foogly</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=872" class="nav" target="_blank">Crazy Videos</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=19214" class="nav" target="_blank">Most Funny Clips</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=1" class="nav" target="_blank">Dumpzilla</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=5" class="nav" target="_blank">Zipped videos</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=6" class="nav" target="_blank">Funny Videos</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=8" class="nav" target="_blank">Funny Pictures</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=10" class="nav" target="_blank">Crackmuffin Clips</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=11" class="nav" target="_blank">Lemonzoo Videos</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=12" class="nav" target="_blank">Sik videos</a></p>
-<p align="left" class="nav"><a href="/linkout.php?id=13" class="nav" target="_blank">Funny Video Hub</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=14" class="nav" target="_blank">Clumzy</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=15" class="nav" target="_blank">Bizarre Video Clips</a></p>
 <p align="left" class="nav"><a href="/linkout.php?id=16" class="nav" target="_blank">Media Lunch Box</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=19" class="nav" target="_blank">Ownage Videos</a></p>
+<p align="left" class="nav"><a href="/linkout.php?id=21" class="nav" target="_blank">Hollywood Paparazzi</a></p>
 	</td>
 </tr>
 <tr>
