--- a/c/ch/che/checkpeople.com.html
+++ b/c/ch/che/checkpeople.com.html
@@ -1,20 +1,19 @@
-<!--The following is the downloaded HTML source of the checkpeople.com privacy policy that was archived on 2013-05-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130527165647id_/http%3A//www.checkpeople.com/company/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the checkpeople.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222170524id_/http%3A//www.checkpeople.com/company/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!--[if IE 7]>         <html xmlns="http://www.w3.org/1999/xhtml" class="no-js lt-ie9 lt-ie8 ie7"> <![endif]--><!--[if IE 8]>         <html xmlns="http://www.w3.org/1999/xhtml" class="no-js lt-ie9 ie8"> <![endif]--><!--[if IE 9]>         <html xmlns="http://www.w3.org/1999/xhtml" class="no-js lt-ie9 ie9"> <![endif]--><head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>    Privacy Policy - CheckPeople.com
+    <script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script><title>    Privacy Policy - CheckPeople.com
 </title>
-    <link rel="shortcut icon" href="//d2af852gd6b1zu.cloudfront.net/assets/images/favicon.png" type="image/x-icon">
-    <link rel="icon" href="//d2af852gd6b1zu.cloudfront.net/assets/images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="//d2af852gd6b1zu.cloudfront.net/assets/css/style.css?051320131334">
+    <link rel="icon" href="//d13upip9nigs71.cloudfront.net/assets/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="//d13upip9nigs71.cloudfront.net/assets/css/style.css?082720130311">
 
-    <link rel="stylesheet" type="text/css" href="//d2af852gd6b1zu.cloudfront.net/assets/css/tipsy.css">
+    <link rel="stylesheet" type="text/css" href="//d13upip9nigs71.cloudfront.net/assets/css/tipsy.css">
     <!--[if IE]>
-        <link rel="stylesheet" type="text/css" href="//d2af852gd6b1zu.cloudfront.net/assets/css/iestyle.css"/>
+        <link rel="stylesheet" type="text/css" href="//d13upip9nigs71.cloudfront.net/assets/css/iestyle.css"/>
     <![endif]-->
 
-    <script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/jquery-1.7.2.min.js"></script>
+    <script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/jquery-1.7.2.min.js"></script>
 
     <meta property="og:title" content="Online Background Checks and Reverse Phone Number Lookup - CheckPeople.com">
     <meta property="og:description" content="Looking for information on someone? Run a background check or reverse phone lookup and find possible criminal history, marital data, address history and much more!">
@@ -23,13 +22,14 @@
     <meta property="og:image" content="http://www.checkpeople.com/assets/images/dodont/stealanidentity.png">
     <meta property="og:site_name" content="CheckPeople">
     <meta property="fb:admins" content="100005574760794">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 </head>
 <body>
 <div id="page_wrap">
 <div id="header_inner" class="non-logged-in">
         <div class="header-inwrapper">
             <div class="logo">
-                <a href="http://www.checkpeople.com/" title="Criminal Background Checks"><img src="//d2af852gd6b1zu.cloudfront.net/assets/images/logo.png" alt="Online Criminal Background Checks"></a>
+                <a href="http://www.checkpeople.com/" title="Criminal Background Checks"><img src="//d13upip9nigs71.cloudfront.net/assets/images/logo.png" alt="Online Criminal Background Checks"></a>
             </div>
                             <div class="header-right">
                                             <div class="signin-block">
@@ -267,7 +267,7 @@
         <div class="footermain">
         <div class="footer_content">
                 <div class="footer_left">
-                    <a href="http://www.checkpeople.com/" class="footer_logo" title="Criminal Background Checks"><img src="//d2af852gd6b1zu.cloudfront.net/assets/images/footer_logo.png" alt="Criminal Background Checks"></a>
+                    <a href="http://www.checkpeople.com/" class="footer_logo" title="Criminal Background Checks"><img src="//d13upip9nigs71.cloudfront.net/assets/images/footer_logo.png" alt="Criminal Background Checks"></a>
                     <p>CheckPeople.com exists to help you have instant access to criminal records &amp; background checks. We believe everyone has the right to search for public records easily. CheckPeople.com is not a consumer reporting agency under the <a href="http://www.ftc.gov/os/statutes/fcrajump.shtm" target="_blank">Fair Credit Reporting Act</a> guidelines. To learn more, please read our <a href="http://www.checkpeople.com/company/terms-of-service" title="Terms of Service">Terms of Service</a> and <a href="http://www.checkpeople.com/company/privacy-policy" title="Privacy Policy">Privacy Policy</a>.</p>
                 </div>
                 <div class="footer_right">
@@ -308,7 +308,8 @@
                 </ul>
             </div>
             <div class="social_right">
-                <a href="javascript:void(0);" onclick="javascript:window.open('https://trustsealinfo.verisign.com/splash?form_file=fdf/splash.fdf&amp;dn=www.checkpeople.com&amp;lang=en','verisign','location=yes,status=yes,resizable=yes,scrollbars=yes,width=560,height=500');"><img src="//d2af852gd6b1zu.cloudfront.net/assets/images/verisign.png"></a>
+                <a href="javascript:void(0);" onclick="javascript:window.open('https://www.mcafeesecure.com/RatingVerify?ref=www.checkpeople.com','mcafee','location=yes,status=yes,resizable=yes,scrollbars=yes,width=560,height=500');"><img src="//d13upip9nigs71.cloudfront.net/assets/images/mcafee.gif" style="height: 40px;margin-top: 10px;margin-left: 10px;"></a>
+                <a href="javascript:void(0);" onclick="javascript:window.open('https://trustsealinfo.verisign.com/splash?form_file=fdf/splash.fdf&amp;dn=www.checkpeople.com&amp;lang=en','verisign','location=yes,status=yes,resizable=yes,scrollbars=yes,width=560,height=500');"><img src="//d13upip9nigs71.cloudfront.net/assets/images/verisign.png"></a>
             </div>
            <div class="clear"></div>
         </div>
@@ -329,17 +330,17 @@
 </script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script> 
 <script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyDnt60svQZI6FECwYBakvWovLAa4a7O-5A&amp;sensor=false"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/slides.min.jquery.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/jquery.validate.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/tipsy.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/common.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/label-infields.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/autotab.jquery.min.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/progress.js?041220130529"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/popup-div.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/jscroll.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/gmap3.min.js"></script>
-<script type="text/javascript" src="//d2af852gd6b1zu.cloudfront.net/assets/js/jquery.masked.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/slides.min.jquery.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/jquery.validate.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/tipsy.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/common.js?082720130308"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/label-infields.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/autotab.jquery.min.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/progress.js?041220130529"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/popup-div.js?082720130308"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/jscroll.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/gmap3.min.js"></script>
+<script type="text/javascript" src="//d13upip9nigs71.cloudfront.net/assets/js/jquery.masked.js"></script>
 
 <script type="text/javascript">
 $(function(){
@@ -347,8 +348,22 @@ $(function(){
     //leftMenutab(6);
 });
 </script>
+<!-- Google Code for Remarketing Tag --> 
+<script type="text/javascript"> 
+/* / var google_conversion_id = 989222990; 
+var google_custom_params = window.google_tag_params; 
+var google_remarketing_only = true; 
+/ ]]> */ </script> 
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"> 
+</script> 
+<noscript> 
+<div style="display:inline;"> 
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/989222990/?value=0&amp;guid=ON&amp;script=0"/> 
+</div> 
+</noscript>
+<!-- END Google Code for Remarketing Tag --> 
 <script type="text/javascript"> (function() {var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s); })(); </script>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>     
+<script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","3db63a5f12","2736544","ZlVQNhZXD0pWVUJeDl8fZxANGQhXU1NOGRFZQA==",0,23,new Date().getTime(),"","","","",""]);</script>
 
-
-</body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
